# rgbd_simulation

./: .gitignore  CMakeLists.txt  README.md  VaFRIC.cpp  VaFRIC.h  add_kinect_noise.cu  add_kinect_noise.cuh  test_vaFRIC.cpp  vector_math.hpp
src/: VaFRIC.cpp  add_kinect_noise.cu  test_vaFRIC.cpp
